k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: lab5
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "app.lab5.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Направляем трафик на наш user-service
            name: user-service-svc
            port:
              number: 8000
